[gd_scene load_steps=10 format=3 uid="uid://b2sgjbr5py4if"]

[ext_resource type="Texture2D" uid="uid://1u3b3hwqd8yh" path="res://art/tile_0110.png" id="1_cjd87"]
[ext_resource type="Script" path="res://scenes/enemy/enemy.gd" id="1_nhap2"]
[ext_resource type="Texture2D" uid="uid://bb3rcs5nqntir" path="res://art/arrow.png" id="2_hsix4"]
[ext_resource type="PackedScene" uid="uid://ts0jc21ldd3b" path="res://scenes/ui/stats_ui.tscn" id="3_b5g61"]
[ext_resource type="PackedScene" uid="uid://b4sfkf5gsaah0" path="res://scenes/ui/intent_ui.tscn" id="5_3yc3l"]
[ext_resource type="PackedScene" uid="uid://d2us32xj16yyl" path="res://scenes/status_handler/status_handler.tscn" id="6_auws5"]
[ext_resource type="PackedScene" uid="uid://b1fma6b5rc6ta" path="res://scenes/modifier_handler/modifier_handler.tscn" id="7_d7amj"]
[ext_resource type="PackedScene" uid="uid://b0afjxln26tvg" path="res://scenes/modifier_handler/modifier.tscn" id="8_iqg4i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_encnl"]
size = Vector2(18, 18)

[node name="Enemy" type="Area2D" groups=["enemies"]]
collision_layer = 4
script = ExtResource("1_nhap2")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_cjd87")
flip_h = true

[node name="Arrow" type="Sprite2D" parent="."]
visible = false
position = Vector2(15, 0)
rotation = -1.5708
texture = ExtResource("2_hsix4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_encnl")
debug_color = Color(0, 0.6, 0.701961, 0.0784314)

[node name="StatsUI" parent="." instance=ExtResource("3_b5g61")]
offset_top = 7.0
offset_bottom = 23.0

[node name="IntentUI" parent="." instance=ExtResource("5_3yc3l")]
offset_top = -25.0
offset_bottom = -11.0

[node name="HandlerContainer" type="CenterContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(70, 0)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -35.0
offset_top = 20.0
offset_right = 35.0
offset_bottom = 30.0
grow_horizontal = 2
size_flags_vertical = 2

[node name="StatusHandler" parent="HandlerContainer" node_paths=PackedStringArray("status_owner") instance=ExtResource("6_auws5")]
unique_name_in_owner = true
layout_mode = 2
status_owner = NodePath("../..")

[node name="ModifierHandler" parent="." instance=ExtResource("7_d7amj")]

[node name="DMGdealt" parent="ModifierHandler" instance=ExtResource("8_iqg4i")]

[node name="DMGtaken" parent="ModifierHandler" instance=ExtResource("8_iqg4i")]
type = 1

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
